fix overflow masking and over rowspan

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html body {
+  overflow-y: scroll !important;
+}
+
 hr.hidden {
   margin: 0;
   border-width: 0;
